Multi-module conversion, Java 22